fix scrollbar

--- a/src/components/Lecture/Lecture.css
+++ b/src/components/Lecture/Lecture.css
@@ -13,3 +13,7 @@
   height: 90vh;
   align-items: center;
 }
+
+.lecture__videoAndComment::-webkit-scrollbar {
+  display: none;
+}
